applied a maximum width to the page so it no longer stretches the whole width of the page, also I fixed drop shadow on hyperlinks.

--- a/css/scss/master.scss
+++ b/css/scss/master.scss
@@ -1,6 +1,9 @@
 @import "bourbon/_bourbon";
 @import "mixins/_custom";
 
+/* Maximum width of the main content of the page. */
+$max-width: 900px;
+
 a {
     color: #1e8cbf;
 
@@ -9,7 +12,7 @@ a {
         color: #fff;
         padding: 3px;
         text-decoration: none;
-        @include box-shadow(0 1px 2px 2px rgba(0, 0, 0, 0.65));
+        @include drop-shadow(2px, 3px, 4px, 0.4);
     }
 }
 
@@ -63,8 +66,14 @@ img {
 }
 
 .main {
+    margin: 0 auto;
     padding: 0 10px;
 } 
+
+.page {
+    margin: 0 auto;
+    max-width: $max-width;
+}
 
 .post-summary {
     color: #666666;
